# serde-keyvalue

./: Cargo.toml  LICENSE  README.md
src/: key_values.rs  lib.rs  serializer.rs
