[package]
name = "serde-keyvalue"
version = "0.4.0"
edition = "2021"
license = "BSD-3-Clause"
description = "Deserialize key=value parameters with serde"
documentation = "https://docs.rs/serde-keyvalue"
homepage = "https://gitlab.com/BrightOpen/serde-keyvalue"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
num-traits = "0.2.18"
remain = "0.2.13"
serde = { version = "1.0.197", default-features = false, features = ["derive", "alloc", "std"] }
thiserror = "1.0.57"
